--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/nn8fPHd/DALL-E-2023-06-06-23-54-13-photography-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photography School</title>
+    <title>Shutterbug Academy</title>
   </head>
   <body>
     <div id="root"></div>
